End of 4th section

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DatingAppContext" : "Server=JAVIER-NB\\SQLEXPRESS;Initial Catalog=datingapp;Persist Security Info=false;Trusted_Connection=True;"
-  }
+  },
+  "TokenKey": "super secret unguessable key"
 }
